Fixed overlapping issues and positioning

--- a/src/sass/modules/_navbar.scss
+++ b/src/sass/modules/_navbar.scss
@@ -7,6 +7,7 @@ nav {
     width: 100%;
     height: 75px;
     
+    z-index: 1;
     position: sticky;
 
     &.sticky {
@@ -34,6 +35,7 @@ nav {
             width: 6em;
             height: 3em;
             line-height: 3em;
+            margin-top: calc(75px / 6);
 
             a {
                 width: 100%;
@@ -87,7 +89,7 @@ nav {
 
         &:checked {
             ~ .menu {
-                max-height: 240px;
+                max-height: 250px;
             }
             ~ .menu-icon {
                 .navicon {
@@ -109,13 +111,6 @@ nav {
         }
     }
 }
-@include media (">=tablet") {
-    nav {
-        // height: $nav-normal-size;
-        // min-height: $nav-sticky-size;
-        // max-height: $nav-normal-size;
-    }
-}
 @include media("<tablet") {
     nav {
         .menu {
@@ -131,6 +126,7 @@ nav {
                 float: left;
                 height: 50px;
                 width: 100%;
+                margin-top: 0;
             }
         }
 
